--- a/src/menuapp/templates/home.template.html
+++ b/src/menuapp/templates/home.template.html
@@ -1,2 +1,2 @@
-<a ui-sref="mainList">This is the home page template!</a>
-<button class="btn btn-primary" ui-sref="category">See Our Menu Categories</button>
+<a ui-sref="mainList">This is the home page!</a>
+<button class="btn btn-primary" ui-sref="category">Click to See Menu Categories</button>
